// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameStats renders the expected game stats 1`] = `
<div
  className="stats"
>
  <span
    className="player"
  >
    <div>
      1st
    </div>
    <div
      className="player__name"
    >
      name: octane
    </div>
    <div>
      WPM: 120
    </div>
    <div>
      accuracy: 86%
    </div>
    <div>
      words typed: 11
    </div>
    <div>
      time: 7 seconds
    </div>
    <div>
      mistakes: 3
    </div>
  </span>
</div>
`;

exports[`GameStats renders two stat blocks 1`] = `
<div
  className="stats"
>
  <span
    className="player"
  >
    <div>
      1st
    </div>
    <div
      className="player__name"
    >
      name: octane
    </div>
    <div>
      WPM: 120
    </div>
    <div>
      accuracy: 86%
    </div>
    <div>
      words typed: 11
    </div>
    <div>
      time: 7 seconds
    </div>
    <div>
      mistakes: 3
    </div>
  </span>
  <span
    className="player"
  >
    <div>
      2nd
    </div>
    <div
      className="player__name"
    >
      name: dominus
    </div>
    <div>
      WPM: 60
    </div>
    <div>
      accuracy: 100%
    </div>
    <div>
      words typed: 11
    </div>
    <div>
      time: 14 seconds
    </div>
    <div>
      mistakes: 0
    </div>
  </span>
</div>
`;
